force-app/main/default/objects/IT_On_Boarding_Request__c/IT_On_Boarding_Request__c.object-meta.xml
<CustomObject>
    <description>New Employee/ Consultant onboarding ticket to IT department.</description>
    <label>IT On-Boarding Request</label>
    <nameField>
        <displayFormat>IT-{00000}</displayFormat>
        <label>IT On-Boarding Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IT On-Boarding Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>