force-app/main/default/objects/IT_On_Boarding_Request__c/fields/Contact_Record__c.field-meta.xml
<CustomField>
    <fullName>Contact_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contact Record in Irrational account</description>
    <inlineHelpText>Contact Record in Irrational account</inlineHelpText>
    <label>Contact Record ?</label>
    <type>Checkbox</type>
</CustomField>