force-app/main/default/objects/IT_On_Boarding_Request__c/fields/Default_warehouse__c.field-meta.xml
<CustomField>
    <fullName>Default_warehouse__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default warehouse in site user object</description>
    <inlineHelpText>Default warehouse in site user object</inlineHelpText>
    <label>Default warehouse ?</label>
    <type>Checkbox</type>
</CustomField>