force-app/main/default/objects/IT_On_Boarding_Request__c/fields/Driver_Record__c.field-meta.xml
<CustomField>
    <fullName>Driver_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Entry in Driver object</inlineHelpText>
    <label>Driver Record?</label>
    <type>Checkbox</type>
</CustomField>