force-app/main/default/objects/IT_On_Boarding_Request__c/fields/Filigreen_Email__c.field-meta.xml
<CustomField>
    <fullName>Filigreen_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filigreen Email ?</label>
    <type>Checkbox</type>
</CustomField>