force-app/main/default/objects/IT_On_Boarding_Request__c/fields/Filigreen_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Filigreen_Email_ID__c</fullName>
    <inlineHelpText>For Admins access only</inlineHelpText>
    <label>Filigreen Email ID</label>
    <type>Email</type>
</CustomField>