force-app/main/default/objects/IT_On_Boarding_Request__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <inlineHelpText>Employee / Consultant first name</inlineHelpText>
    <label>First Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>