force-app/main/default/objects/IT_On_Boarding_Request__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>First_Name__c  &amp; &apos; &apos; &amp;  Last_Name__c</formula>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>