force-app/main/default/objects/IT_On_Boarding_Request__c/fields/GDrive_Access__c.field-meta.xml
<CustomField>
    <fullName>GDrive_Access__c</fullName>
    <label>GDrive Access</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BCC Regulations - Read</fullName>
            </value>
            <value>
                <fullName>BCC Regulations - Read/Write</fullName>
            </value>
            <value>
                <fullName>Biscotti Buy Sell Docs - Read</fullName>
            </value>
            <value>
                <fullName>Biscotti Buy Sell Docs - Read/Write</fullName>
            </value>
            <value>
                <fullName>Brand Marketing - Read</fullName>
            </value>
            <value>
                <fullName>Brand Marketing - Read/Write</fullName>
            </value>
            <value>
                <fullName>Buy Sell Templates - Read</fullName>
            </value>
            <value>
                <fullName>Buy Sell Templates - Read/Write</fullName>
            </value>
            <value>
                <fullName>Certificate Of Analysis - Read</fullName>
            </value>
            <value>
                <fullName>Certificate Of Analysis - Read/Write</fullName>
            </value>
            <value>
                <fullName>CSA - Read</fullName>
            </value>
            <value>
                <fullName>CSA - Read/Write</fullName>
            </value>
            <value>
                <fullName>Cultivation Tax Receipts - Read</fullName>
            </value>
            <value>
                <fullName>Cultivation Tax Receipts - Read/Write</fullName>
            </value>
            <value>
                <fullName>Customer Quotes - Read</fullName>
            </value>
            <value>
                <fullName>Customer Quotes - Read/Write</fullName>
            </value>
            <value>
                <fullName>DV1 - Read</fullName>
            </value>
            <value>
                <fullName>DV1 - Read/Write</fullName>
            </value>
            <value>
                <fullName>Dymo Label Templates - Read</fullName>
            </value>
            <value>
                <fullName>Dymo Label Templates - Read/Write</fullName>
            </value>
            <value>
                <fullName>Excise Tax Receipts - Read</fullName>
            </value>
            <value>
                <fullName>Excise Tax Receipts - Read/Write</fullName>
            </value>
            <value>
                <fullName>Filigreen Templates - Read</fullName>
            </value>
            <value>
                <fullName>Filigreen Templates - Read/Write</fullName>
            </value>
            <value>
                <fullName>Filigreen and Henry&apos;s Original Buy Sell Docs - Read</fullName>
            </value>
            <value>
                <fullName>Filigreen and Henry&apos;s Original Buy Sell Docs - Read/Write</fullName>
            </value>
            <value>
                <fullName>Filigreen Customer Portal Icons - Read</fullName>
            </value>
            <value>
                <fullName>Filigreen Customer Portal Icons - Read/Write</fullName>
            </value>
            <value>
                <fullName>Filigreen Images - Read</fullName>
            </value>
            <value>
                <fullName>Filigreen Images - Read/Write</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>