force-app/main/default/objects/IT_On_Boarding_Request__c/fields/GDrive_Access_Notes__c.field-meta.xml
<CustomField>
    <fullName>GDrive_Access_Notes__c</fullName>
    <label>GDrive Access Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>