force-app/main/default/objects/IT_On_Boarding_Request__c/fields/Gmail_GDrive_Access__c.field-meta.xml
<CustomField>
    <fullName>Gmail_GDrive_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gmail GDrive Access ?</label>
    <type>Checkbox</type>
</CustomField>