force-app/main/default/objects/IT_On_Boarding_Request__c/fields/Gmail_GDrive_Access_Completed__c.field-meta.xml
<CustomField>
    <fullName>Gmail_GDrive_Access_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gmail GDrive Access Completed?</label>
    <type>Checkbox</type>
</CustomField>