force-app/main/default/objects/IT_On_Boarding_Request__c/fields/Google_Groups__c.field-meta.xml
<CustomField>
    <fullName>Google_Groups__c</fullName>
    <label>Google Groups</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSA{csa@wearewovn.com}</fullName>
            </value>
            <value>
                <fullName>DL-Accounts Payable{ap@wearewovn.com}</fullName>
            </value>
            <value>
                <fullName>DL-Accounts Receivable{ar@wearewovn.com}</fullName>
            </value>
            <value>
                <fullName>DL-Announcement{announcement@wearewovn.com}</fullName>
            </value>
            <value>
                <fullName>DL-ASR{asr@wearewovn.com}</fullName>
            </value>
            <value>
                <fullName>DL-BrandQuote{brandquote@wearewovn.com}</fullName>
            </value>
            <value>
                <fullName>DL-Calendar{calendar@wearewovn.com}</fullName>
            </value>
            <value>
                <fullName>DL-Compliance{compliance@wearewovn.com}</fullName>
            </value>
            <value>
                <fullName>DL-Events{events@wearewovn.com}</fullName>
            </value>
            <value>
                <fullName>DL-Inbound{inbound@wearewovn.com}</fullName>
            </value>
            <value>
                <fullName>DL-Info{info@wearewovn.com}</fullName>
            </value>
            <value>
                <fullName>DL-Investors{investors@wearewovn.com}</fullName>
            </value>
            <value>
                <fullName>DL-Invoice{invoice@wearewovn.com}</fullName>
            </value>
            <value>
                <fullName>DL-Marketing{marketing@wearewovn.com}</fullName>
            </value>
            <value>
                <fullName>DL-Onboarding{onboarding@wearewovn.com}</fullName>
            </value>
            <value>
                <fullName>DL-Orders{orders@wearewovn.com}</fullName>
            </value>
            <value>
                <fullName>DL-Outbound{outbound@wearewovn.com}</fullName>
            </value>
            <value>
                <fullName>DL-Production{production@wearewovn.com}</fullName>
            </value>
            <value>
                <fullName>DL - Purchasing{po@wearewovn.com}</fullName>
            </value>
            <value>
                <fullName>DL-Purchasing{purchasing@wearewovn.com}</fullName>
            </value>
            <value>
                <fullName>DL-QA{qa@wearewovn.com}</fullName>
            </value>
            <value>
                <fullName>DL-Sales{sales@wearewovn.com}</fullName>
            </value>
            <value>
                <fullName>DL-Shipping{shipping@wearewovn.com}</fullName>
            </value>
            <value>
                <fullName>DL Shipping Manifest{shippingmanifest@wearewovn.com}</fullName>
            </value>
            <value>
                <fullName>DL-Testing{testing@wearewovn.com}</fullName>
            </value>
            <value>
                <fullName>HR{hr@wearewovn.com}</fullName>
            </value>
            <value>
                <fullName>DL-SFDC Compliance{sfdccompliance@wearewovn.com}</fullName>
                <isActive>false</isActive>
                <label>DL-SFDC Compliance{sfdccompliance@wearewovn.com}</label>
            </value>
            <value>
                <fullName>DL-SFDC-MP{sfdc.mp@wearewovn.com}</fullName>
                <isActive>false</isActive>
                <label>DL-SFDC-MP{sfdc.mp@wearewovn.com}</label>
            </value>
            <value>
                <fullName>DL-SFDC-Testing{sfdc.testing@wearewovn.com}</fullName>
                <isActive>false</isActive>
                <label>DL-SFDC-Testing{sfdc.testing@wearewovn.com}</label>
            </value>
            <value>
                <fullName>IT Dev Team{itdev@wearewovn.com}</fullName>
                <isActive>false</isActive>
                <label>IT Dev Team{itdev@wearewovn.com}</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>