force-app/main/default/objects/IT_On_Boarding_Request__c/fields/iPad__c.field-meta.xml
<CustomField>
    <fullName>iPad__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>iPad with 4G lite ?</inlineHelpText>
    <label>iPad ?</label>
    <type>Checkbox</type>
</CustomField>