force-app/main/default/objects/IT_On_Boarding_Request__c/fields/IT_Request_Complete__c.field-meta.xml
<CustomField>
    <fullName>IT_Request_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IT Request Complete?</label>
    <type>Checkbox</type>
</CustomField>