force-app/main/default/objects/IT_On_Boarding_Request__c/fields/IT_Team_Notes__c.field-meta.xml
<CustomField>
    <fullName>IT_Team_Notes__c</fullName>
    <inlineHelpText>Notes from IT team</inlineHelpText>
    <label>IT Team Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>