force-app/main/default/objects/IT_On_Boarding_Request__c/fields/job_Title__c.field-meta.xml
<CustomField>
    <fullName>job_Title__c</fullName>
    <label>Job Title</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>