force-app/main/default/objects/IT_On_Boarding_Request__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager?</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IT_On_Boarding_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>