force-app/main/default/objects/IT_On_Boarding_Request__c/fields/MS_Office__c.field-meta.xml
<CustomField>
    <fullName>MS_Office__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MS-Office?</label>
    <type>Checkbox</type>
</CustomField>