force-app/main/default/objects/IT_On_Boarding_Request__c/fields/no_of_Monitors__c.field-meta.xml
<CustomField>
    <fullName>no_of_Monitors__c</fullName>
    <label>No.of.Monitors</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Workstation__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>