force-app/main/default/objects/IT_On_Boarding_Request__c/fields/Personnel_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Email_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <inlineHelpText>Email ID to send GMail login details/ Not Filigreen Email ID</inlineHelpText>
    <label>Personnel Email ID</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>