force-app/main/default/objects/IT_On_Boarding_Request__c/fields/Public_Groups__c.field-meta.xml
<CustomField>
    <fullName>Public_Groups__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Add to Public groups : Filigreen users, order submitter ???</description>
    <inlineHelpText>Add to Public groups : Filigreen users, order submitter ???</inlineHelpText>
    <label>Public Groups ?</label>
    <type>Checkbox</type>
</CustomField>