force-app/main/default/objects/IT_On_Boarding_Request__c/fields/Related_Contact__c.field-meta.xml
<CustomField>
    <fullName>Related_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>IT On-Boarding Requests</relationshipLabel>
    <relationshipName>IT_On_Boarding_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>