force-app/main/default/objects/IT_On_Boarding_Request__c/fields/Salesforce_Access__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salesforce Access?</label>
    <type>Checkbox</type>
</CustomField>