force-app/main/default/objects/IT_On_Boarding_Request__c/fields/Salesforce_Access_Enabled_By_IT__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Access_Enabled_By_IT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salesforce Access Enabled By IT ?</label>
    <type>Checkbox</type>
</CustomField>