force-app/main/default/objects/IT_On_Boarding_Request__c/fields/Salesforce_Conga__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Conga__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Access to salesforce-Conga tool to print doc.</inlineHelpText>
    <label>Salesforce - Conga?</label>
    <type>Checkbox</type>
</CustomField>