force-app/main/default/objects/IT_On_Boarding_Request__c/fields/Salesforce_Conga_Activated__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Conga_Activated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salesforce - Conga Activated?</label>
    <type>Checkbox</type>
</CustomField>