force-app/main/default/objects/IT_On_Boarding_Request__c/fields/Slack__c.field-meta.xml
<CustomField>
    <fullName>Slack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Slack ?</label>
    <type>Checkbox</type>
</CustomField>