force-app/main/default/objects/IT_On_Boarding_Request__c/fields/Slack_Activated__c.field-meta.xml
<CustomField>
    <fullName>Slack_Activated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Slack Activated?</label>
    <type>Checkbox</type>
</CustomField>