force-app/main/default/objects/IT_On_Boarding_Request__c/fields/Slack_Channel_Notes__c.field-meta.xml
<CustomField>
    <fullName>Slack_Channel_Notes__c</fullName>
    <label>Slack Channel Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>