force-app/main/default/objects/IT_On_Boarding_Request__c/fields/Slack_Channels__c.field-meta.xml
<CustomField>
    <fullName>Slack_Channels__c</fullName>
    <label>Slack Channels</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>bcc</fullName>
            </value>
            <value>
                <fullName>canogapark</fullName>
            </value>
            <value>
                <fullName>coa</fullName>
            </value>
            <value>
                <fullName>collections</fullName>
            </value>
            <value>
                <fullName>contracts</fullName>
            </value>
            <value>
                <fullName>cultivationtax</fullName>
            </value>
            <value>
                <fullName>delivery-schedule</fullName>
            </value>
            <value>
                <fullName>drivers</fullName>
            </value>
            <value>
                <fullName>filigreenfurbabies</fullName>
            </value>
            <value>
                <fullName>foodies</fullName>
            </value>
            <value>
                <fullName>general</fullName>
            </value>
            <value>
                <fullName>henryoriginal</fullName>
            </value>
            <value>
                <fullName>inventory</fullName>
            </value>
            <value>
                <fullName>invoices</fullName>
            </value>
            <value>
                <fullName>labeling</fullName>
            </value>
            <value>
                <fullName>marketing</fullName>
            </value>
            <value>
                <fullName>marketplace</fullName>
            </value>
            <value>
                <fullName>metrc</fullName>
            </value>
            <value>
                <fullName>mp_ib_transfer</fullName>
            </value>
            <value>
                <fullName>mp_legionofbloom</fullName>
            </value>
            <value>
                <fullName>mp_ob_transfer</fullName>
            </value>
            <value>
                <fullName>mp_orders</fullName>
            </value>
            <value>
                <fullName>mp_retail_orders</fullName>
            </value>
            <value>
                <fullName>mp_servicetickets</fullName>
            </value>
            <value>
                <fullName>news</fullName>
            </value>
            <value>
                <fullName>northollywood</fullName>
            </value>
            <value>
                <fullName>onboarding</fullName>
            </value>
            <value>
                <fullName>opentickets</fullName>
            </value>
            <value>
                <fullName>opex</fullName>
            </value>
            <value>
                <fullName>orders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>