force-app/main/default/objects/IT_On_Boarding_Request__c/fields/Smartsheet__c.field-meta.xml
<CustomField>
    <fullName>Smartsheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Smartsheet ?</label>
    <type>Checkbox</type>
</CustomField>