force-app/main/default/objects/IT_On_Boarding_Request__c/fields/Smartsheet_Activated__c.field-meta.xml
<CustomField>
    <fullName>Smartsheet_Activated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Smartsheet Activated?</label>
    <type>Checkbox</type>
</CustomField>