force-app/main/default/objects/IT_On_Boarding_Request__c/fields/Start_Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Hire_Date__c</fullName>
    <inlineHelpText>Start date to enable access to IT application</inlineHelpText>
    <label>Start/Hire Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>