force-app/main/default/objects/IT_On_Boarding_Request__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <length>15</length>
    <type>Text</type>
</CustomField>