force-app/main/default/objects/IT_On_Boarding_Request__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <label>Warehouse</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2089-3 - San Francisco</fullName>
            </value>
            <value>
                <fullName>NHWCA - Los Angeles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>