force-app/main/default/objects/IT_On_Boarding_Request__c/fields/Workstation__c.field-meta.xml
<CustomField>
    <fullName>Workstation__c</fullName>
    <label>Workstation?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Laptop - PC 13&apos;</fullName>
            </value>
            <value>
                <fullName>Laptop - PC - 15&apos;</fullName>
            </value>
            <value>
                <fullName>Laptop - Mac 13&apos;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>