force-app/main/default/objects/IT_On_Boarding_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Full_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Workstation__c</columns>
    <columns>no_of_Monitors__c</columns>
    <columns>IT_Request_Complete__c</columns>
    <columns>job_Title__c</columns>
    <columns>Warehouse__c</columns>
    <columns>Related_Contact__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>